--- a/p8105_hw5_sz2872.md
+++ b/p8105_hw5_sz2872.md
@@ -5,6 +5,8 @@ Shane
 
 # Problem 1
 
+## import data
+
 ``` r
 homicide_df = 
   read_csv("data/homicide-data.csv") %>% 
@@ -36,6 +38,8 @@ homicide_df =
     ##   disposition = col_character()
     ## )
 
+## aggregate origin data
+
 ``` r
 homicide_sum = 
   homicide_df %>% 
@@ -47,6 +51,8 @@ homicide_sum =
 ```
 
     ## `summarise()` ungrouping output (override with `.groups` argument)
+
+## test on one data
 
 ``` r
 prop.test(
@@ -62,6 +68,8 @@ prop.test(
 | --------: | --------: | --------: |
 | 0.6455607 | 0.6275625 | 0.6631599 |
 
+## write function
+
 ``` r
 prop_test = function(x){
   
@@ -75,6 +83,8 @@ prop_test = function(x){
 }
 ```
 
+## function applied
+
 ``` r
 city_prop_test = 
   map(.x = homicide_sum$city_state, .f = ~prop_test(.x)) %>% 
@@ -82,6 +92,8 @@ city_prop_test =
   mutate(city_state = homicide_sum$city_state) %>% 
   select(city_state, everything())
 ```
+
+## making plot
 
 ``` r
 city_prop_test %>% 
