get data for p2

--- a/p8105_hw5_sz2872.md
+++ b/p8105_hw5_sz2872.md
@@ -122,7 +122,9 @@ data =
   bind_rows() %>% 
   mutate(name = file_name) %>% 
   select(name, everything()) %>% 
-  separate(name, c("arm", "id"), remove = FALSE) %>% 
+  separate(name, c("arm", "arm_id", "end")) %>% 
+  unite(group, c("arm", "arm_id"), remove = FALSE) %>% 
+  select(!"end") %>% 
   pivot_longer(
     "week_1":"week_8", 
     names_to = "week", 
@@ -130,7 +132,7 @@ data =
     names_prefix = "week_"
   ) %>% 
   mutate(
-    id = as.numeric(id),
+    arm_id = as.numeric(arm_id),
     week = as.numeric(week)   
   )
 ```
