--- a/p8105_hw5_sz2872.Rmd
+++ b/p8105_hw5_sz2872.Rmd
@@ -131,7 +131,9 @@ data =
   bind_rows() %>% 
   mutate(name = file_name) %>% 
   select(name, everything()) %>% 
-  separate(name, c("arm", "id"), remove = FALSE) %>% 
+  separate(name, c("arm", "arm_id", "end")) %>% 
+  unite(group, c("arm", "arm_id"), remove = FALSE) %>% 
+  select(!"end") %>% 
   pivot_longer(
     "week_1":"week_8", 
     names_to = "week", 
@@ -139,7 +141,7 @@ data =
     names_prefix = "week_"
   ) %>% 
   mutate(
-    id = as.numeric(id),
+    arm_id = as.numeric(arm_id),
     week = as.numeric(week)   
   )
 ``` 
