--- a/p8105_hw5_sz2872.md
+++ b/p8105_hw5_sz2872.md
@@ -357,3 +357,19 @@ data =
     ##   week_7 = col_double(),
     ##   week_8 = col_double()
     ## )
+
+## make plot
+
+``` r
+data %>% 
+  ggplot(aes(x = week, y = observation, group = group, col = arm))+
+  geom_line() +
+  labs(
+    title = "Observations for each arm over Time",
+    x = "Week",
+    y = "Observation",
+    caption = "Data from a longitudinal study") +
+  theme(legend.position = "bottom")
+```
+
+<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
