--- a/p8105_hw5_sz2872.md
+++ b/p8105_hw5_sz2872.md
@@ -1,7 +1,11 @@
 Homework 5
 ================
 Shane
-2020-11-17
+2020-11-18
+
+``` r
+set.seed(1)
+```
 
 # Problem 1
 
@@ -104,7 +108,7 @@ city_prop_test %>%
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 ```
 
-<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
+<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-7-1.png" width="90%" />
 
 # Problem 2
 
@@ -372,4 +376,44 @@ data %>%
   theme(legend.position = "bottom")
 ```
 
-<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
+<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+
+# Problem 3
+
+## write function
+
+``` r
+sim_n_sd = function(n = 30, mu, sigma = 5) {
+  
+  sim_data = tibble(
+    x = rnorm(n = n, mean = mu, sd = sigma),
+  )
+  
+  sim_output = 
+    sim_data %>% 
+    t.test(mu = mu) %>% 
+    broom::tidy() %>% 
+    select(estimate, p.value)
+  
+  sim_output
+}
+
+sim_n_sd(mu = 0)
+```
+
+    ## # A tibble: 1 x 2
+    ##   estimate p.value
+    ##      <dbl>   <dbl>
+    ## 1    0.412   0.629
+
+## mu = 0 for 5000 times
+
+``` r
+output = vector("list", 5000)
+
+for (i in 1:5000) {
+  output[[i]] = sim_n_sd(mu = 0)
+}
+
+sim_results = bind_rows(output)
+```
