--- a/p8105_hw5_sz2872.md
+++ b/p8105_hw5_sz2872.md
@@ -409,11 +409,44 @@ sim_n_sd(mu = 0)
 ## mu = 0 for 5000 times
 
 ``` r
-output = vector("list", 5000)
+sim_results = 
+  rerun(5000, sim_n_sd(mu = 0)) %>% 
+  bind_rows()
 
-for (i in 1:5000) {
-  output[[i]] = sim_n_sd(mu = 0)
+sim_results %>% filter(p.value < 0.05)
+```
+
+    ## # A tibble: 254 x 2
+    ##    estimate  p.value
+    ##       <dbl>    <dbl>
+    ##  1    -2.13 0.0348  
+    ##  2     3.20 0.000455
+    ##  3     1.99 0.0106  
+    ##  4    -2.00 0.0299  
+    ##  5    -2.18 0.0113  
+    ##  6     2.32 0.0247  
+    ##  7     2.08 0.0156  
+    ##  8    -2.75 0.00627 
+    ##  9    -1.67 0.0440  
+    ## 10    -2.50 0.0178  
+    ## # … with 244 more rows
+
+## mu = 1:6
+
+``` r
+mu_list = 
+  list(
+    "mu_1" = 1, 
+    "mu_2" = 2, 
+    "mu_3" = 3, 
+    "mu_4" = 4,
+    "mu_5" = 5,
+    "mu_6" = 6)
+
+output = vector("list", length = 6)
+
+for (i in 1:4) {
+  output[[i]] = rerun(5000, sim_n_sd(mu = mu_list[[i]])) %>% 
+    bind_rows
 }
-
-sim_results = bind_rows(output)
 ```
