--- a/p8105_hw5_sz2872.Rmd
+++ b/p8105_hw5_sz2872.Rmd
@@ -32,10 +32,6 @@ scale_colour_discrete = scale_colour_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
 ```
 
-```{r}
-set.seed(1)
-```
-
 
 
 # Problem 1
@@ -184,55 +180,66 @@ From the plot, it is obvious that experiment group has higher position as whole,
 
 # Problem 3
 
+```{r}
+set.seed(1)
+```
+
+
+
 ## write function
 
 ```{r}
-sim_n_sd = function(n = 30, mu, sigma = 5) {
+sim_n_sd = function(sample_size = 30, mu, sigma = 5) {
   
   sim_data = tibble(
-    x = rnorm(n = n, mean = mu, sd = sigma),
+    x = rnorm(n = sample_size, mean = mu, sd = sigma),
   )
   
   sim_output = 
     sim_data %>% 
-    t.test(mu = mu) %>% 
+    t.test(mu = 0, conf.level = 0.95) %>% 
     broom::tidy() %>% 
     select(estimate, p.value)
   
   sim_output
 }
-
-sim_n_sd(mu = 0)
 ```
 
 ## mu = 0 for 5000 times
 
 ```{r}
-sim_results = 
-  rerun(5000, sim_n_sd(mu = 0)) %>% 
+rerun(5000, sim_n_sd(mu = 0)) %>% 
   bind_rows()
-
-sim_results %>% filter(p.value < 0.05)
 ```
 
 ## mu = 1:6
 
 ```{r}
-
+sim_results =
+  tibble(mu = 0:6) %>% 
+  mutate(
+    output = map( .x = mu, ~rerun(5000,sim_n_sd(mu = .x ))),
+    output = map(output, bind_rows)
+  ) %>%
+  unnest(output) 
 ```
 
+## plot for power
 
-  
+```{r}
+sim_results %>% 
+  mutate(reject = case_when(p.value < 0.05 ~ "reject", TRUE ~ "fail to reject")) %>% 
+  group_by(mu) %>% 
+  summarise(
+    reject = sum(p.value < 0.05),
+    count = n(),
+    power = reject/count
+  ) %>% 
+  ggplot(aes(x = mu, y = power)) +
+  geom_point() +
+  geom_line() +
+  labs(x = expression(mu[i]),
+       title = "power under different effect size")
+```
 
-
-
-
-
-
-
-
-
-
-
-
-
+Greater effect size is associated with higher power. When effect size goes to certain level of large as 4, 5, or 6 in this case, power basically stay in a straight line.
