--- a/p8105_hw5_sz2872.md
+++ b/p8105_hw5_sz2872.md
@@ -1,11 +1,7 @@
 Homework 5
 ================
 Shane
-2020-11-18
-
-``` r
-set.seed(1)
-```
+2020-11-19
 
 # Problem 1
 
@@ -108,7 +104,7 @@ city_prop_test %>%
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 ```
 
-<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-7-1.png" width="90%" />
+<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
 
 # Problem 2
 
@@ -390,7 +386,7 @@ plot_group =
 plot_arm + plot_group
 ```
 
-<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
 
 From the plot, it is obvious that experiment group has higher position
 as whole, compared to control group. The difference is getting clear as
@@ -399,55 +395,85 @@ individual con & exp groups.
 
 # Problem 3
 
+``` r
+set.seed(1)
+```
+
 ## write function
 
 ``` r
-sim_n_sd = function(n = 30, mu, sigma = 5) {
+sim_n_sd = function(sample_size = 30, mu, sigma = 5) {
   
   sim_data = tibble(
-    x = rnorm(n = n, mean = mu, sd = sigma),
+    x = rnorm(n = sample_size, mean = mu, sd = sigma),
   )
   
   sim_output = 
     sim_data %>% 
-    t.test(mu = mu) %>% 
+    t.test(mu = 0, conf.level = 0.95) %>% 
     broom::tidy() %>% 
     select(estimate, p.value)
   
   sim_output
 }
-
-sim_n_sd(mu = 0)
 ```
-
-    ## # A tibble: 1 x 2
-    ##   estimate p.value
-    ##      <dbl>   <dbl>
-    ## 1    0.412   0.629
 
 ## mu = 0 for 5000 times
 
 ``` r
-sim_results = 
-  rerun(5000, sim_n_sd(mu = 0)) %>% 
+rerun(5000, sim_n_sd(mu = 0)) %>% 
   bind_rows()
-
-sim_results %>% filter(p.value < 0.05)
 ```
 
-    ## # A tibble: 254 x 2
-    ##    estimate  p.value
-    ##       <dbl>    <dbl>
-    ##  1    -2.13 0.0348  
-    ##  2     3.20 0.000455
-    ##  3     1.99 0.0106  
-    ##  4    -2.00 0.0299  
-    ##  5    -2.18 0.0113  
-    ##  6     2.32 0.0247  
-    ##  7     2.08 0.0156  
-    ##  8    -2.75 0.00627 
-    ##  9    -1.67 0.0440  
-    ## 10    -2.50 0.0178  
-    ## # … with 244 more rows
+    ## # A tibble: 5,000 x 2
+    ##    estimate p.value
+    ##       <dbl>   <dbl>
+    ##  1    0.412  0.629 
+    ##  2    0.664  0.368 
+    ##  3    0.551  0.534 
+    ##  4    0.567  0.487 
+    ##  5   -1.65   0.0599
+    ##  6    1.19   0.229 
+    ##  7    0.334  0.738 
+    ##  8   -1.19   0.209 
+    ##  9    0.122  0.887 
+    ## 10    0.684  0.472 
+    ## # … with 4,990 more rows
 
 ## mu = 1:6
+
+``` r
+sim_results =
+  tibble(mu = 0:6) %>% 
+  mutate(
+    output = map( .x = mu, ~rerun(5000,sim_n_sd(mu = .x ))),
+    output = map(output, bind_rows)
+  ) %>%
+  unnest(output) 
+```
+
+## plot for power
+
+``` r
+sim_results %>% 
+  mutate(reject = case_when(p.value < 0.05 ~ "reject", TRUE ~ "fail to reject")) %>% 
+  group_by(mu) %>% 
+  summarise(
+    reject = sum(p.value < 0.05),
+    count = n(),
+    power = reject/count
+  ) %>% 
+  ggplot(aes(x = mu, y = power)) +
+  geom_point() +
+  geom_line() +
+  labs(x = expression(mu[i]),
+       title = "power under different effect size")
+```
+
+    ## `summarise()` ungrouping output (override with `.groups` argument)
+
+<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
+
+Greater effect size is associated with higher power. When effect size
+goes to certain level of large as 4, 5, or 6 in this case, power
+basically stay in a straight line.
