plot for average estimations

--- a/p8105_hw5_sz2872.md
+++ b/p8105_hw5_sz2872.md
@@ -455,8 +455,11 @@ sim_results =
 ## plot for power
 
 ``` r
-sim_results %>% 
-  mutate(reject = case_when(p.value < 0.05 ~ "reject", TRUE ~ "fail to reject")) %>% 
+sim_decision = 
+  sim_results %>% 
+  mutate(decision = case_when(p.value < 0.05 ~ "reject", TRUE ~ "fail to reject"))
+
+sim_decision %>% 
   group_by(mu) %>% 
   summarise(
     reject = sum(p.value < 0.05),
@@ -467,6 +470,7 @@ sim_results %>%
   geom_point() +
   geom_line() +
   labs(x = expression(mu[i]),
+       y = "the power of the test",
        title = "power under different effect size")
 ```
 
@@ -477,3 +481,47 @@ sim_results %>%
 Greater effect size is associated with higher power. When effect size
 goes to certain level of large as 4, 5, or 6 in this case, power
 basically stay in a straight line.
+
+## plot for average estimations
+
+``` r
+plot_avg_est = 
+  sim_decision %>% 
+  group_by(mu) %>% 
+  summarise(avg_est = mean(estimate)) %>% 
+  ggplot(aes(x = mu, y = avg_est)) +
+  geom_point() +
+  geom_line() +
+  labs(x = expression(mu[i]),
+       y = "average estimate of mu",
+       title = "power under different effect size")
+```
+
+    ## `summarise()` ungrouping output (override with `.groups` argument)
+
+``` r
+plot_avg_est_rej = 
+  sim_decision %>% 
+  group_by(mu) %>% 
+  filter(decision == "reject") %>% 
+  summarise(avg_est = mean(estimate)) %>% 
+  ggplot(aes(x = mu, y = avg_est)) +
+  geom_point() +
+  geom_line() +
+  labs(x = expression(mu[i]),
+       y = "average estimate of rejected mu",
+       title = "power under different effect size")
+```
+
+    ## `summarise()` ungrouping output (override with `.groups` argument)
+
+``` r
+plot_avg_est + plot_avg_est_rej
+```
+
+<img src="p8105_hw5_sz2872_files/figure-gfm/unnamed-chunk-15-1.png" width="90%" />
+
+When effect size is large (in this case, greater to 3), the average
+estimation of mu is approximately equal to the true value of mu. When
+effect size is smaller (0 tp 3), the average estimation of rejected mu
+seems to have higher slope.
