--- a/p8105_hw5_sz2872.md
+++ b/p8105_hw5_sz2872.md
@@ -525,3 +525,7 @@ When effect size is large (in this case, greater to 3), the average
 estimation of mu is approximately equal to the true value of mu. When
 effect size is smaller (0 tp 3), the average estimation of rejected mu
 seems to have higher slope.
+
+The average for all sample mu is a good estimator for the true mu. the
+average for rejected mu can be a good estimator for the true mean when
+the effect size is large.
